# stardict

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: sd_array.h  sd_dictd.c  sd_dictd.h  sd_dictfile.c  sd_dictfile.h  sd_dictfile_index.c  sd_dictfile_index.h  sd_dictzip.c  sd_dictzip.h  sd_port.h  sd_stardict.c  sd_stardict.h  sd_stardict_ifo.c  sd_stardict_ifo.h  sd_stardict_res.c  sd_stardict_res.h  sd_stardict_syn.c  sd_stardict_syn.h  sd_types.c  sd_types.h
stardict.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  main.c  test_array.c  test_dictd.c  test_dictzip.c  test_fixture.c  test_stardict.c
tests/data/dictd-eng-zho/: eng-zho.dict.dz  eng-zho.index  eng-zho.index.sdoft  eng-zho.udx
tests/data/stardict-xiandaiyinghan-2.4.2/: xiandaiyinghan.dict.dz  xiandaiyinghan.idx  xiandaiyinghan.idx.sdoft  xiandaiyinghan.idx.udoft  xiandaiyinghan.ifo
